@@ -14,6 +14,6 @@ ADD_MSVC_PRECOMPILED_HEADER("kernel.h" "kernel.cpp" SOURCE_FILES)
 
 GENERATE_LUA_PACKAGE(SOURCE_FILES)
 
-ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})
+ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} "kernel.def")
 
 TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna)
