@@ -12,3 +12,4 @@
 - Simplified cmake files.
 - Added support for lua package generation.
 - Adding initial implementation of lunagen kernel.
+- Calling executeMain in lunagen launcher.
